Added skopt and nevergrad to pyproject

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,6 +47,8 @@ optuna = ["optuna"]
 yahpo-gym = ["yahpo-gym"]
 smac = ["smac"]
 dehb = ["dehb"]
+skopt = ["scikit-optimize"]
+nevergrad = ["nevergrad"]
 pymoo = ["pymoo"]
 mfpbench_main = ["mf-prior-bench"]        # NOTE: doesn't install by itself. Install separately and then upgrade ConfigSpace
 syne-tune = ["syne-tune[basic]", "syne-tune[gpsearchers]"]     # NOTE: install separately, throws PYYAML build errors
