--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ dependencies = [
   "pyyaml",
   "pyarrow",
   "ConfigSpace>=1.0",
-  "hpoglue @ file:///home/soham/repos/hpoglue?editable=true"
+  "hpoglue"
   ]
 authors = [
   { name = "Soham Basu", email = "soham.basu07@gmail.com" },
@@ -31,7 +31,6 @@ classifiers = [
   'Operating System :: MacOS',
   'Programming Language :: Python :: 3',
   'Programming Language :: Python :: 3.10',
-  'Programming Language :: Python :: 3.11',
 ]
 license = { file = "LICENSE" }
 
