--- a/examples/exp_configs/sample_singlerun_config.yaml
+++ b/examples/exp_configs/sample_singlerun_config.yaml
@@ -1,6 +1,6 @@
+study_name: sample_singlerun
+output_dir: example-outputs
 optimizers: SMAC_Hyperband
 benchmarks: mfh3_good
 seeds: 1
 budget: 100
-overwrite: True
-continuations: True
