--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "hposuite"
 version = "0.1.1"
 requires-python = ">=3.10"
 dependencies = [
-  "hpoglue>=0.2.4",
+  "hpoglue>=0.2.5",
   "pandas>=2,<3",
   "matplotlib>=3,<4",
   "tqdm",
@@ -62,6 +62,7 @@ all = [
   "scikit-optimize",
   "nevergrad",
   "hebo",
+  "neural-pipeline-search>=0.13.0",
   "pymoo",
   "mf-prior-bench[pd1]>=1.10.0",
   "ioh>=0.3.14"
@@ -73,7 +74,8 @@ optimizers = [
   "dehb",
   "scikit-optimize",
   "nevergrad",
-  "hebo"
+  "hebo",
+  "neural-pipeline-search>=0.13.0"
 ]
 
 benchmarks = [
@@ -88,6 +90,7 @@ dehb = ["dehb"]
 skopt = ["scikit-optimize"]
 nevergrad = ["nevergrad"]
 hebo = ["hebo"]
+neps = ["neural-pipeline-search>=0.13.0"]
 pymoo = ["pymoo"]
 mfpbench = ["mf-prior-bench[pd1]>=1.10.0"]
 bbob = ["ioh>=0.3.14"]
